[gd_scene load_steps=11 format=3 uid="uid://c46a44f3l7cm0"]

[ext_resource type="Script" path="res://Scripts/UIController.gd" id="1_uj38h"]
[ext_resource type="Theme" uid="uid://cy8uik3hm8t3u" path="res://UITheme.tres" id="2_tysbo"]
[ext_resource type="Texture2D" uid="uid://bxn8kvm570f80" path="res://Art/Test/White.png" id="3_7oo4m"]
[ext_resource type="Texture2D" uid="uid://bsw411bj3oblf" path="res://Art/UI/chickpea bg.png" id="4_b6xbe"]
[ext_resource type="Texture2D" uid="uid://u65n8d01up0v" path="res://Art/UI/PortraitBashfulNoSprout.png" id="4_u0flx"]
[ext_resource type="Texture2D" uid="uid://b87lngawmxo8k" path="res://Art/UI/DialogNextArrow.png" id="5_5pnbf"]
[ext_resource type="Script" path="res://Scripts/VoiceSoundPlayer.gd" id="5_0602t"]

[sub_resource type="Animation" id="Animation_vu5kx"]
resource_name = "Arrow"
loop_mode = 1
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("TextureRect:position")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.5),
"transitions": PackedFloat32Array(1, 1),
"update": 0,
"values": [Vector2(520, 80), Vector2(520, 75)]
}

[sub_resource type="Animation" id="Animation_jvpl0"]
length = 0.001
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("TextureRect:position")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [Vector2(528, 80)]
}

[sub_resource type="AnimationLibrary" id="AnimationLibrary_6ui6s"]
_data = {
"Arrow": SubResource("Animation_vu5kx"),
"RESET": SubResource("Animation_jvpl0")
}

[node name="UIController" type="CanvasLayer"]
process_mode = 3
script = ExtResource("1_uj38h")

[node name="DialogContainer" type="Control" parent="."]
process_mode = 3
visible = false
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
theme = ExtResource("2_tysbo")

[node name="NinePatchRect" type="NinePatchRect" parent="DialogContainer"]
self_modulate = Color(0.486275, 0.486275, 0.486275, 0.560784)
layout_mode = 1
anchors_preset = -1
anchor_left = 0.25
anchor_top = 0.3
anchor_right = 0.75
anchor_bottom = 0.6
offset_bottom = -26.0
grow_horizontal = 2
grow_vertical = 2
texture = ExtResource("3_7oo4m")

[node name="MarginContainer" type="MarginContainer" parent="DialogContainer/NinePatchRect"]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
theme_override_constants/margin_left = 15
theme_override_constants/margin_top = 15
theme_override_constants/margin_right = 15
theme_override_constants/margin_bottom = 15

[node name="TextureRect2" type="TextureRect" parent="DialogContainer/NinePatchRect/MarginContainer"]
layout_mode = 2
texture = ExtResource("4_b6xbe")
expand_mode = 1

[node name="TextureRect" type="TextureRect" parent="DialogContainer/NinePatchRect/MarginContainer"]
layout_mode = 2
size_flags_horizontal = 3
size_flags_vertical = 3
texture = ExtResource("4_u0flx")
expand_mode = 1
stretch_mode = 5

[node name="DialogTextRect" type="NinePatchRect" parent="DialogContainer"]
self_modulate = Color(0.486275, 0.486275, 0.486275, 0.560784)
layout_mode = 1
anchors_preset = -1
anchor_left = 0.1
anchor_top = 0.85
anchor_right = 0.9
anchor_bottom = 0.95
grow_horizontal = 2
grow_vertical = 0
texture = ExtResource("3_7oo4m")

[node name="MarginContainer" type="MarginContainer" parent="DialogContainer/DialogTextRect"]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
theme_override_constants/margin_left = 20
theme_override_constants/margin_top = 10
theme_override_constants/margin_right = 20
theme_override_constants/margin_bottom = 10

[node name="DialogText" type="RichTextLabel" parent="DialogContainer/DialogTextRect/MarginContainer"]
layout_mode = 2
theme_override_colors/default_color = Color(1, 1, 1, 1)
bbcode_enabled = true
text = "Testing My Text... What do you think?"
fit_content = true

[node name="TextureRect" type="TextureRect" parent="DialogContainer/DialogTextRect"]
modulate = Color(1, 1, 1, 0.733333)
layout_mode = 1
anchors_preset = 3
anchor_left = 1.0
anchor_top = 1.0
anchor_right = 1.0
anchor_bottom = 1.0
offset_left = 528.0
offset_top = 80.0
offset_right = 576.0
offset_bottom = 128.0
grow_horizontal = 0
grow_vertical = 0
texture = ExtResource("5_5pnbf")
expand_mode = 1

[node name="AnimationPlayer" type="AnimationPlayer" parent="DialogContainer/DialogTextRect"]
autoplay = "Arrow"
libraries = {
"": SubResource("AnimationLibrary_6ui6s")
}

[node name="AudioStreamPlayer" type="AudioStreamPlayer" parent="."]
volume_db = -4.0
script = ExtResource("5_0602t")
base_pitch_scale = 4.0
